--- a/README
+++ b/README
@@ -11,7 +11,7 @@ This layer depends on:
 
   URI: https://github.com/Xilinx/meta-xilinx
   layers: meta-xilinx
-  branch: morty
+  branch: rocko
 
 
 Patches
